--- a/src/views/my-tic-tac-toe/index.less
+++ b/src/views/my-tic-tac-toe/index.less
@@ -1,8 +1,5 @@
 .board {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
+  margin: 20px auto;
   display: grid;
   width: 150px;
   height: 150px;
